@@ -35,6 +35,7 @@ import java.util.List;
 
 
 import org.gjt.sp.jedit.*;
+import org.gjt.sp.util.EnhancedTreeCellRenderer;
 import org.gjt.sp.util.Log;
 //}}}
 
@@ -491,7 +492,7 @@ public abstract class OptionsDialog extends EnhancedDialog
 	//}}}
 
 	//{{{ PaneNameRenderer class
-	public static class PaneNameRenderer extends DefaultTreeCellRenderer
+	public static class PaneNameRenderer extends EnhancedTreeCellRenderer
 	{
 		public PaneNameRenderer()
 		{
@@ -501,13 +502,17 @@ public abstract class OptionsDialog extends EnhancedDialog
 			groupFont = paneFont.deriveFont(Font.BOLD);
 		}
 
-		public Component getTreeCellRendererComponent(JTree tree,
+		@Override
+		protected TreeCellRenderer newInstance()
+		{
+			return new PaneNameRenderer();
+		}
+
+		@Override
+		protected void configureTreeCellRendererComponent(JTree tree,
 			Object value, boolean selected, boolean expanded,
 			boolean leaf, int row, boolean hasFocus)
 		{
-			super.getTreeCellRendererComponent(tree,value,
-				selected,expanded,leaf,row,hasFocus);
-
 			String name = null;
 
 			if (value instanceof OptionGroup)
@@ -542,8 +547,6 @@ public abstract class OptionsDialog extends EnhancedDialog
 			}
 
 			setIcon(null);
-
-			return this;
 		}
 
 		private Font paneFont;
